// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WizardHeaderItem renders the default structure correctly 1`] = `
<div
  className="nav-item"
/>
`;

exports[`WizardHeaderItem renders with children 1`] = `
<div
  className="nav-item"
>
  <div>
    My Child
  </div>
</div>
`;
